--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -3,8 +3,21 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/editor.css"/>
 </head>
 <body>
+
+<div class="wrap">
+    <div class="nav"></div>
+    <div class="container editors">
+        <div class="col editor" style="width: 33.3%;"></div>
+        <div class="col editor" style="width: 33.3%;"></div>
+        <div class="col editor" style="width: 33.2%;"></div>
+    </div>
+</div>
+
 
 </body>
 </html>
