添加配置文件，添加当前主键文件

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -17,42 +17,14 @@
     <div class="nav"><span id="play" class="play"></span></div>
     <div id="editors" class="container editors">
         <div class="col editor" style="width: 33.3%;">
-            <textarea id="html" name="code">
-<h1>Mixed HTML Example</h1>
-<div id="a"></div>
-<h2> 2015年9月21日 23:30:46</h2>
-
-<h3>2015年9月22日 20:34:21</h3>
-<a href="http://codemirror.net/doc/manual.html#api">Code<a>
-
-            </textarea>
+            <textarea id="html" name="code"></textarea>
         </div>
         <div class="col editor" style="width: 33.3%;">
-            <textarea id="css" name="code">
-h1 {
-    font-family: comic sans;
-    color: #f0f;
-}
-div {
-    background: yellow !important;
-                height:100px;
-                width:100px;
-}
-
-body {
-    max-width: 50em;
-    margin: 1em 2em 1em 5em;
-}
-
-            </textarea>
+            <textarea id="css" name="code"></textarea>
 
         </div>
         <div class="col editor" style="width: 33.2%;">
-             <textarea id="javascript" name="code">
-document.getElementById('a').onclick=function(){
-                 alert("a");
-}
-             </textarea>
+             <textarea id="javascript" name="code"></textarea>
 
         </div>
     </div>
