可以新增，保存文档

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="wrap">
-    <div class="nav"><span id="play" class="play"></span></div>
+    <div class="nav"><span id="newCase">新</span><span id="play" class="play"></span></div>
     <div id="editors" class="container editors">
         <div class="col editor" style="width: 36%;">
             <textarea id="html" name="code"></textarea>
