添加删除和查找的功能

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="wrap">
-    <nav class="nav"><span id="newCase">新</span><span id="play" class="play"></span></nav>
+    <nav class="nav"><span id="newCase">新</span><span id="delCase">删</span><span id="play" class="play"></span></nav>
     <aside id="listPanel">
 
         <ul class="code-list" id="codeUL">
