添加操作提示

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -18,9 +18,6 @@
     <aside id="listPanel">
 
         <ul class="code-list" id="codeUL">
-            <li>测试一下目录的效果</li>
-            <li>测试一下目录的效果2</li>
-            <li>测试一下目录的效果3</li>
         </ul>
 
     </aside>
@@ -43,6 +40,11 @@
 
     </section>
     <span id="listGrip">...</span>
+
+    <p id="notice">
+    </p>
+
+
 
 </div>
 <script>
