改用弹性布局

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -26,14 +26,14 @@
 
     </aside>
     <section id="editors" class="container editors">
-        <div class="col editor" style="width: 36%;">
+        <div class="editor">
             <textarea id="html" name="code"></textarea>
         </div>
-        <div class="col editor" style="width: 30%;">
+        <div class="editor">
             <textarea id="css" name="code"></textarea>
 
         </div>
-        <div class="col editor" style="width: 33%;">
+        <div class="editor">
             <textarea id="javascript" name="code"></textarea>
 
         </div>
