--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -15,12 +15,13 @@
 
 <div class="wrap">
     <nav class="nav" id="nav_js">
-        <span id="newCase">新</span>
-        <span id="delCase">删</span>
+        <span data-action="newCase">新</span>
+        <span data-action="delCase">删</span>
         <span data-action="toggle" data-target="html">HTML</span>
         <span data-action="toggle" data-target="css">CSS</span>
         <span data-action="toggle" data-target="js">JS</span>
-        <span id="play" class="play"></span>
+        <span data-action="save">Save</span>
+        <span data-action="play" class="play"></span>
     </nav>
     <aside id="listPanel">
 
