添加editor隐藏快捷键

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -17,9 +17,9 @@
     <nav class="nav" id="nav_js">
         <span data-action="newCase">新</span>
         <span data-action="delCase">删</span>
-        <span data-action="toggle" data-target="html">HTML</span>
-        <span data-action="toggle" data-target="css">CSS</span>
-        <span data-action="toggle" data-target="js">JS</span>
+        <span data-action="toggle" data-target="html">Html</span>
+        <span data-action="toggle" data-target="css">Css</span>
+        <span data-action="toggle" data-target="js">Js</span>
         <span data-action="save">Save</span>
         <span data-action="play" class="play"></span>
     </nav>
