优化部份细节

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -44,12 +44,12 @@
     </section>
     <section id="result" class="container editors">
 
-        <iframe id="resultframe" frameborder="0"></iframe>
+        <iframe id="resultframe" src="demo.html" frameborder="0"></iframe>
 
     </section>
     <span id="listGrip">...</span>
 
-    <p id="notice">
+    <p id="notice" style="display: none;">
     </p>
 
 
