--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -15,13 +15,13 @@
 
 <div class="wrap">
     <nav class="nav" id="nav_js">
-        <span data-action="newCase">新</span>
-        <span data-action="delCase">删</span>
-        <span data-action="toggle" data-target="html">Html</span>
-        <span data-action="toggle" data-target="css">Css</span>
-        <span data-action="toggle" data-target="js">Js</span>
-        <span data-action="save">Save</span>
-        <span data-action="play" class="play"></span>
+        <span data-action="newCase" class="nav-action">New</span>
+        <span data-action="delCase" class="nav-action">Del</span>
+        <span data-action="toggle" data-target="html" class="nav-action">Html</span>
+        <span data-action="toggle" data-target="css" class="nav-action">Css</span>
+        <span data-action="toggle" data-target="js" class="nav-action">Js</span>
+        <span data-action="save" class="nav-action">Save</span>
+        <span data-action="play" class="nav-action">Run</span>
     </nav>
     <aside id="listPanel">
 
