--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -47,7 +47,7 @@
     </section>
     <section id="result" class="container editors">
 
-        <iframe id="resultframe" src="demo.html" frameborder="0"></iframe>
+        <iframe id="resultframe" frameborder="0"></iframe>
 
     </section>
     <span id="listGrip">...</span>
