--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title></title>
     <script src="js/require.js" defer async="true" data-main="js/main"></script>
     <link rel="stylesheet" href="css/normalize.css"/>
