--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -7,6 +7,7 @@
     <script src="js/require.js" defer async="true" data-main="js/main"></script>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/codemirror.css"/>
+    <link rel="stylesheet" href="css/show-hint.css"/>
     <link rel="stylesheet" href="css/layout.css"/>
     <link rel="stylesheet" href="css/editor.css"/>
     <link rel="stylesheet" href="css/nav.css"/>
