添加格式化代码的功能

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -33,16 +33,16 @@
     </aside>
     <section id="editors" class="container editors">
         <div class="editor">
-            <span class="code-tag">html</span>
+            <span class="code-tag" data-action="format" data-editor="html">html</span>
             <textarea id="html" name="code"></textarea>
         </div>
         <div class="editor">
-            <span class="code-tag">css</span>
+            <span class="code-tag" data-action="format" data-editor="css">css</span>
             <textarea id="css" name="code"></textarea>
 
         </div>
         <div class="editor">
-            <span class="code-tag">javascript</span>
+            <span class="code-tag" data-action="format" data-editor="js">javascript</span>
             <textarea id="javascript" name="code"></textarea>
 
         </div>
