--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -22,9 +22,9 @@
             <li><span  data-action="newCase" data-action-keymap="alt+n" class="icon icon-new"></span></li>
             <li><span  data-action="save" data-action-keymap="alt+s" class="icon icon-save"></span></li>
             <li><span  data-action="play" data-action-keymap="alt+r" class="icon icon-play"></span></li>
-            <li><span  data-action="toggle" data-action-keymap="ctrl+alt+h"  data-action-argu="html"  class="icon">HTML</span></li>
-            <li><span  data-action="toggle" data-action-keymap="ctrl+alt+c" data-action-argu="css" class="icon">CSS</span></li>
-            <li><span  data-action="toggle" data-action-keymap="ctrl+alt+j" data-action-argu="js" class="icon">Javascript</span></li>
+            <li><span  data-action="toggle" data-action-keymap="alt+h"  data-action-argu="html"  class="icon">HTML</span></li>
+            <li><span  data-action="toggle" data-action-keymap="alt+c" data-action-argu="css" class="icon">CSS</span></li>
+            <li><span  data-action="toggle" data-action-keymap="alt+j" data-action-argu="js" class="icon">Javascript</span></li>
             <li><span  data-action="delCase" data-action-keymap="ctrl+alt+d" class="icon icon-del"></span></li>
             <li><span  data-action="export"  class="icon icon-down"></span></li>
         </ul>
@@ -37,16 +37,16 @@
     </aside>
     <section id="editors" class="container editors">
         <div class="editor">
-            <span class="code-tag" data-action="format" data-action-argu="html">html</span>
+            <span class="code-tag" data-action="format" data-action-keymap="ctrl+alt+h" data-action-argu="html">html</span>
             <textarea id="html" name="code"></textarea>
         </div>
         <div class="editor">
-            <span class="code-tag" data-action="format" data-action-argu="css">css</span>
+            <span class="code-tag" data-action="format" data-action-keymap="ctrl+alt+c" data-action-argu="css">css</span>
             <textarea id="css" name="code"></textarea>
 
         </div>
         <div class="editor">
-            <span class="code-tag" data-action="format" data-action-argu="js">javascript</span>
+            <span class="code-tag" data-action="format" data-action-keymap="ctrl+alt+j" data-action-argu="js">javascript</span>
             <textarea id="javascript" name="code"></textarea>
 
         </div>
