--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -19,14 +19,14 @@
 <div class="wrap">
     <nav class="nav" id="nav_js">
         <ul class="nav-action">
-            <li><span  data-action="newCase" data-keymap="alt+n" class="icon icon-new"></span></li>
-            <li><span  data-action="save" data-keymap="alt+s" class="icon icon-save"></span></li>
-            <li><span  data-action="play" data-keymap="alt+r" class="icon icon-play"></span></li>
+            <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new"></span></li>
+            <li><span  data-action="save" data-keymap="alt+s" class="icon-save"></span></li>
+            <li><span  data-action="play" data-keymap="alt+r" class="icon-play"></span></li>
             <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  class="icon" data-on="true">HTML</span></li>
             <li><span  data-action="toggle" data-keymap="alt+c" data-argu="css" class="icon" data-on="true">CSS</span></li>
             <li><span  data-action="toggle" data-keymap="alt+j" data-argu="js" class="icon" >Javascript</span></li>
-            <li><span  data-action="delCase" data-keymap="ctrl+alt+d" class="icon icon-del"></span></li>
-            <li><span  data-action="export"  class="icon icon-down"></span></li>
+            <li><span  data-action="delCase" data-keymap="ctrl+alt+d" class="icon-del"></span></li>
+            <li><span  data-action="export"  class="icon-down"></span></li>
         </ul>
     </nav>
     <aside id="listPanel">
@@ -56,7 +56,7 @@
         <iframe id="resultframe" frameborder="0"></iframe>
 
     </section>
-    <div id="listGrip"><span data-action="listGrip" data-keymap="alt+l"  class="icon icon-list"></span></div>
+    <div id="listGrip"><span data-action="listGrip" data-keymap="alt+l"  class="icon-list"></span></div>
 
     <p id="notice" style="display: none;">
     </p>
