--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -25,16 +25,10 @@
             <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  class="icon" data-on="true">HTML</span></li>
             <li><span  data-action="toggle" data-keymap="alt+c" data-argu="css" class="icon" data-on="true">CSS</span></li>
             <li><span  data-action="toggle" data-keymap="alt+j" data-argu="js" class="icon" >Javascript</span></li>
-            <li><span  data-action="delCase" data-keymap="ctrl+alt+d" class="icon-del"></span></li>
-            <li><span  data-action="export"  class="icon-down"></span></li>
+
         </ul>
     </nav>
-    <aside id="listPanel">
 
-        <ul class="code-list" id="codeUL">
-        </ul>
-
-    </aside>
     <section id="editors" class="container editors">
         <div class="editor">
             <span class="code-tag" data-action="format" data-keymap="ctrl+alt+h" data-argu="html">html</span>
@@ -57,7 +51,21 @@
 
     </section>
     <div id="listGrip"><span data-action="listGrip" data-keymap="alt+l"  class="icon-list"></span></div>
+    <aside id="listPanel">
 
+        <ul class="code-list" id="codeUL">
+        </ul>
+
+    </aside>
+    <div id="configGrip"><span data-action="configGrip" data-keymap="alt+g"  class="icon-config"></span></div>
+    <aside id="configPanel">
+
+        <ul class="config-list">
+            <li data-action="delCase" data-keymap="ctrl+alt+d"><span  class="icon-del"><span>删除</span></span></li>
+            <li data-action="export"><span  class="icon-down"></span><span>导出</span></li>
+        </ul>
+
+    </aside>
     <p id="notice" style="display: none;">
     </p>
 
