--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>Lucien</title>
     <script src="js/require.js" defer async="true" data-main="js/main"></script>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/codemirror.css"/>
@@ -47,7 +47,7 @@
     </section>
     <section id="result" class="container editors">
 
-        <iframe id="resultframe" frameborder="0"></iframe>
+        <iframe id="resultframe"></iframe>
 
     </section>
     <div id="listGrip"><span data-action="listGrip" data-keymap="alt+l"  class="icon-list"></span></div>
