修复标签匹配问题

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -61,7 +61,7 @@
     <aside id="configPanel">
 
         <ul class="config-list">
-            <li data-action="delCase" data-keymap="ctrl+alt+d"><span  class="icon-del"><span>删除</span></span></li>
+            <li data-action="delCase" data-keymap="ctrl+alt+d"><span  class="icon-del"></span><span>删除</span></li>
             <li data-action="export"><span  class="icon-down"></span><span>导出</span></li>
         </ul>
 
