调整导航栏样式

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -19,13 +19,18 @@
 <div class="wrap">
     <nav class="nav" id="nav_js">
         <ul class="nav-action">
-            <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new"></span></li>
-            <li><span  data-action="save" data-keymap="alt+s" class="icon-save"></span></li>
-            <li><span  data-action="play" data-keymap="alt+r" class="icon-play"></span></li>
-            <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  class="icon" data-on="true">HTML</span></li>
-            <li><span  data-action="toggle" data-keymap="alt+c" data-argu="css" class="icon" data-on="true">CSS</span></li>
-            <li><span  data-action="toggle" data-keymap="alt+j" data-argu="js" class="icon" >Javascript</span></li>
-
+            <ul class="nav-classify">
+                <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new"></span></li>
+            </ul>
+            <ul class="nav-classify">
+                <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  data-on="true">HTML</span></li>
+                <li><span  data-action="toggle" data-keymap="alt+c" data-argu="css" data-on="true">CSS</span></li>
+                <li><span  data-action="toggle" data-keymap="alt+j" data-argu="js" >Javascript</span></li>
+            </ul>
+            <ul class="nav-classify">
+                <li><span  data-action="save" data-keymap="alt+s" class="icon-save"></span></li>
+                <li><span  data-action="play" data-keymap="alt+r" class="icon-play"></span></li>
+            </ul>
         </ul>
     </nav>
 
