实现copy的功能

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -21,6 +21,7 @@
         <ul class="nav-action">
             <ul class="nav-classify">
                 <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new"></span></li>
+                <li><span  data-action="copy"  class="icon-copy"></span></li>
             </ul>
             <ul class="nav-classify">
                 <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  data-on="true">HTML</span></li>
