review页点击列表需要两次才显示

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -20,8 +20,8 @@
     <nav class="nav" id="nav_js">
         <ul class="nav-action">
             <ul class="nav-classify">
-                <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new"></span></li>
-                <li><span  data-action="copy"  class="icon-copy"></span></li>
+                <li><span  data-action="newCase" data-keymap="alt+n" class="icon-new" title="New"></span></li>
+                <li><span  data-action="copy"  class="icon-copy" title="Copy"></span></li>
             </ul>
             <ul class="nav-classify">
                 <li><span  data-action="toggle" data-keymap="alt+h"  data-argu="html"  data-on="true">HTML</span></li>
@@ -29,8 +29,8 @@
                 <li><span  data-action="toggle" data-keymap="alt+j" data-argu="js" >Javascript</span></li>
             </ul>
             <ul class="nav-classify">
-                <li><span  data-action="save" data-keymap="alt+s" class="icon-save"></span></li>
-                <li><span  data-action="play" data-keymap="alt+r" class="icon-play"></span></li>
+                <li><span  data-action="save" data-keymap="alt+s" class="icon-save" title="Save"></span></li>
+                <li><span  data-action="play" data-keymap="alt+r" class="icon-play" title="Review"></span></li>
             </ul>
         </ul>
     </nav>
