添加说明代码

--- a/Source/FE/index.html
+++ b/Source/FE/index.html
@@ -38,11 +38,99 @@
     <section id="editors" class="container editors">
         <div class="editor">
             <span class="code-tag" data-action="format" data-keymap="ctrl+alt+h" data-argu="html">html</span>
-            <textarea id="html" name="code"></textarea>
+            <textarea id="html" name="code">
+<div class="wrap">
+    <h2>Web Editor</h2>
+    <p>面向未来的web编辑器</p>
+    <h4>实现功能</h4>
+    <ul>
+        <li>emmet语法</li>
+        <li>云同步</li>
+        <li>高亮</li>
+        <li>Ctrl+j   jump to match tag</li>
+    </ul>
+    <h4>快捷键</h4>
+    <table>
+        <tr>
+            <td>序号</td>
+            <td>作用</td>
+            <td>快捷键</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>列表</td>
+            <td>Alt+l</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>运行/run</td>
+            <td>Alt+R</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>保存/save</td>
+            <td>alt+s</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显js编辑器</td>
+            <td>alt+J</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显html编辑器</td>
+            <td>alt+H</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显css编辑器</td>
+            <td>alt+C</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>格式化代码</td>
+            <td>ctrl+alt+f</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>css智能感知</td>
+            <td>Shift-Tab</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>emmet或智能感知</td>
+            <td>Tab</td>
+        </tr>
+    </table>
+</div>
+
+
+
+            </textarea>
         </div>
         <div class="editor">
             <span class="code-tag" data-action="format" data-keymap="ctrl+alt+c" data-argu="css">css</span>
-            <textarea id="css" name="code"></textarea>
+            <textarea id="css" name="code">
+                body
+{
+  font-family: Microsoft YaHei, "微软雅黑";
+}
+.wrap
+{
+  width:68%;
+  margin:0 auto;
+}
+table
+{
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+table,tr,td
+{
+  border: 1px solid #aaa;
+}
+
+            </textarea>
 
         </div>
         <div class="editor"  style="display: none;">
