--- a/Source/FE/public/index.html
+++ b/Source/FE/public/index.html
@@ -1,1 +1,89 @@
-<!DOCTYPE html><html manifest="editor.appcache"><head lang="en"><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Lucien</title><script src="js/require.js" defer="defer" async="true" data-main="js/main"></script><link rel="stylesheet" href="css/editor.css"></head><body><div class="wrap"><nav class="nav" id="nav_js"><ul class="nav-action"><ul class="nav-classify"><li><span data-action="newCase" data-keymap="alt+n" class="icon-new" title="New"></span></li><li><span data-action="copy" class="icon-copy" title="Copy"></span></li></ul><ul class="nav-classify"><li><span data-action="toggle" data-keymap="alt+h" data-argu="html" data-on="true">HTML</span></li><li><span data-action="toggle" data-keymap="alt+c" data-argu="css" data-on="true">CSS</span></li><li><span data-action="toggle" data-keymap="alt+j" data-argu="js">Javascript</span></li></ul><ul class="nav-classify"><li><span data-action="save" data-keymap="alt+s" class="icon-save" title="Save"></span></li><li><span data-action="play" data-keymap="alt+r" class="icon-play" title="Review"></span></li></ul></ul></nav><section id="editors" class="container editors"><div class="editor"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+h" data-argu="html">html</span><textarea id="html" name="code"></textarea></div><div class="editor"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+c" data-argu="css">css</span><textarea id="css" name="code"></textarea></div><div class="editor" style="display: none"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+j" data-argu="js">javascript</span><textarea id="javascript" name="code"></textarea></div></section><section id="result" class="container editors"><iframe id="resultframe"></iframe></section><div id="listGrip"><span data-action="listGrip" data-keymap="alt+l" class="icon-list"></span></div><aside id="listPanel"><ul class="code-list" id="codeUL"></ul></aside><div id="configGrip"><span data-action="configGrip" data-keymap="alt+g" class="icon-config"></span></div><aside id="configPanel"><ul class="config-list"><li data-action="delCase" data-keymap="ctrl+alt+d"><span class="icon-del"></span><span>删除</span></li><li data-action="export"><span class="icon-down"></span><span>导出</span></li></ul></aside><p id="notice" style="display: none"></p></div></body></html>
+<!DOCTYPE html><html manifest="editor.appcache"><head lang="en"><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Lucien</title><script src="js/require.js" defer="defer" async="true" data-main="js/main"></script><link rel="stylesheet" href="css/editor.css"></head><body><div class="wrap"><nav class="nav" id="nav_js"><ul class="nav-action"><ul class="nav-classify"><li><span data-action="newCase" data-keymap="alt+n" class="icon-new" title="New"></span></li><li><span data-action="copy" class="icon-copy" title="Copy"></span></li></ul><ul class="nav-classify"><li><span data-action="toggle" data-keymap="alt+h" data-argu="html" data-on="true">HTML</span></li><li><span data-action="toggle" data-keymap="alt+c" data-argu="css" data-on="true">CSS</span></li><li><span data-action="toggle" data-keymap="alt+j" data-argu="js">Javascript</span></li></ul><ul class="nav-classify"><li><span data-action="save" data-keymap="alt+s" class="icon-save" title="Save"></span></li><li><span data-action="play" data-keymap="alt+r" class="icon-play" title="Review"></span></li></ul></ul></nav><section id="editors" class="container editors"><div class="editor"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+h" data-argu="html">html</span><textarea id="html" name="code">
+<div class="wrap">
+    <h2>Web Editor</h2>
+    <p>面向未来的web编辑器</p>
+    <h4>实现功能</h4>
+    <ul>
+        <li>emmet语法</li>
+        <li>云同步</li>
+        <li>高亮</li>
+        <li>Ctrl+j   jump to match tag</li>
+    </ul>
+    <h4>快捷键</h4>
+    <table>
+        <tr>
+            <td>序号</td>
+            <td>作用</td>
+            <td>快捷键</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>列表</td>
+            <td>Alt+l</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>运行/run</td>
+            <td>Alt+R</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>保存/save</td>
+            <td>alt+s</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显js编辑器</td>
+            <td>alt+J</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显html编辑器</td>
+            <td>alt+H</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>隐/显css编辑器</td>
+            <td>alt+C</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>格式化代码</td>
+            <td>ctrl+alt+f</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>css智能感知</td>
+            <td>Shift-Tab</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>emmet或智能感知</td>
+            <td>Tab</td>
+        </tr>
+    </table>
+</div>
+
+
+
+            </textarea></div><div class="editor"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+c" data-argu="css">css</span><textarea id="css" name="code">
+                body
+{
+  font-family: Microsoft YaHei, "微软雅黑";
+}
+.wrap
+{
+  width:68%;
+  margin:0 auto;
+}
+table
+{
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+table,tr,td
+{
+  border: 1px solid #aaa;
+}
+
+            </textarea></div><div class="editor" style="display: none"><span class="code-tag" data-action="format" data-keymap="ctrl+alt+j" data-argu="js">javascript</span><textarea id="javascript" name="code"></textarea></div></section><section id="result" class="container editors"><iframe id="resultframe"></iframe></section><div id="listGrip"><span data-action="listGrip" data-keymap="alt+l" class="icon-list"></span></div><aside id="listPanel"><ul class="code-list" id="codeUL"></ul></aside><div id="configGrip"><span data-action="configGrip" data-keymap="alt+g" class="icon-config"></span></div><aside id="configPanel"><ul class="config-list"><li data-action="delCase" data-keymap="ctrl+alt+d"><span class="icon-del"></span><span>删除</span></li><li data-action="export"><span class="icon-down"></span><span>导出</span></li></ul></aside><p id="notice" style="display: none"></p></div></body></html>
